use utf8 constant